Sync-in latest changes